[project]
name = "reqcraft"
version = "0.1.0"
description = "A terminal-first HTTP client and test runner for API collections"
readme = "README.md"
authors = [
    { name = "LilBr21", email = "halina.syposz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["httpx>=0.27", "typer>=0.12", "rich>=13.0", "pydantic>=2.0", "pyyaml>=6.0", "jinja2>=3.1", "jmespath>=1.0", "python-dotenv>=1.0", ]

[project.scripts]
reqcraft = "reqcraft.cli.app:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]